--- a/モダンJS/0124非同期処理.md
+++ b/モダンJS/0124非同期処理.md
@@ -12,3 +12,101 @@
 [非同期処理の概念](https://www.r-staffing.co.jp/engineer/entry/20221216_1)
 [非同期処理のまとめ](https://zenn.dev/tentel/articles/8146043d1101b5ea873d)
 [なぜ非同期処理が必要なのか？](https://qiita.com/ryosuketter/items/dd467f827c1b93a74d76)
+
+# 1/25
+非同期処理を行う上で使用するコールバックの弱点
+```
+setTimeoutを用いた非同期処理
+setTimeout('コールバック関数で書く非同期処理', 'タイムアウト時間(ms)'
+
+console.log(1);
+setTimeout(() => {
+  console.log('1秒経過しました');
+}, 1000);
+
+console.log(3);
+setTimeoutという非同期処理APIがメインスレッドから一時的に離れて、1秒後に再びメインスレッドで実行されている
+```
+```
+console.log(1);
+setTimeout(() => {
+  console.log('1秒経過しました');
+  setTimeout(() => {
+    console.log('2秒経過しました');
+    setTimeout(() => {
+      console.log('3秒経過しました');
+    }, 1000);
+  }, 1000);
+}, 1000);
+
+console.log(3);
+
+出力順は1->3->1秒経過しました->2秒経過しました->3秒経過しました
+コールバックの弱点として、非同期処理を繰り返す場合、入れ子が深くなり読みづらい
+```
+```
+console.log(1);
+setTimeout(() => {
+  console.log('1秒経過しました');
+  setTimeout(() => {
+    console.log('2秒経過しました');
+    setTimeout(() => {
+      console.log('3秒経過しました');
+    }, 1000);
+  }, 1000);
+}, 1000);
+
+console.log(3);
+
+	出力順は1->3->1秒経過しました->2秒経過しました->3秒経過しました
+コールバックの弱点として、非同期処理を繰り返す場合、入れ子が深くなり読みづらい
+```
+
+# コールバック地獄の救世主プロミス
+```
+Promise の状態は以下のいずれかとなります。
+待機 (pending): 初期状態。成功も失敗もしていません。=Promiseのオブジェクトを作ったとき
+
+const promise = new Promise(() => {});
+console.log(promise);
+console.log('開始');
+setTimeout(() => {
+  console.log('1秒経過しました');
+  setTimeout(() => {
+    console.log('2秒経過しました');
+    setTimeout(() => {
+      console.log('3秒経過しました');
+    }, 1000);
+  }, 1000);
+}, 1000);
+
+console.log('終了');
+```
+# 変更後のコード
+```
+
+コールバック地獄対策として、非同期処理成功後にまた非同期処理成功をさせないといけない。そのためにPromiseがある。
+
+Promiseにはthenメソッドってのがあり、こいつはコールバック関数を使える、そしてこいつはresolveメソッド実行時に呼び出される。
+
+const promise = new Promise((resolve, reject) => {
+  setTimeout(() => {
+    console.log('1秒経過しました');
+
+    resolve();
+  }, 1000);
+});
+console.log(promise);
+
+promise.then(() => {
+  console.log('1秒経過後のthenメソッドだよ');
+});
+
+console.log('開始');
+
+console.log('終了');
+
+//※ただし、Promiseには状態をチェックするAPIはない（履行 (fulfilled状態): 処理が成功して完了したことを意味）
+
+.then(() => {});には外部の変数を読み取る性質がある。
+```
