--- a/モダンJS/0124非同期処理.md
+++ b/モダンJS/0124非同期処理.md
@@ -110,3 +110,5 @@ console.log('終了');
 
 .then(() => {});には外部の変数を読み取る性質がある。
 ```
+[Promiseの概要](https://www.r-staffing.co.jp/engineer/entry/20230303_1)
+[マリオで学ぶ非同期処理](https://zenn.dev/nameless_sn/articles/javascript_async_tutorial)
