--- a/Vue.js/0131算出プロパティ.md
+++ b/Vue.js/0131算出プロパティ.md
@@ -13,6 +13,11 @@
 - 複数のデータソースから派生したデータを表示する：ユーザーのフルネームを表示したいが、名前と姓が別々のデータプロパティとして存在する場合
 名前や姓のどちらかが変わった時に、フルネームもそれに応じて自動的に更新されるようにしたい→算出プロパティを使うと、名前や姓のどちらかが変わると自動的にフルネームが再計算され、いつも最新の状態を保つことがでる
 
+算出プロパティが利用できるなら、できる限り利用した方がページの表示速度は改善する。→「カートの合計金額の計算。」
+
+イベントごとの必ず実行させたいときだけ、メソッドを利用する。→ユーザが必ず実行しないといけない処理「カートにアイテムの追加。削除」
+
+
 ## 説明
  特に複雑なロジックを実行するときやロジックの再利用性を高めたいときには算出プロパティを利用することが推奨
 
@@ -109,3 +114,48 @@ app.mount('#app');
 
 算出プロパティcomputedのほうはキャッシュされるため1回しかログ出力されない
 methodsはキャッシュされないのでログが3回出力される
+
+<details>
+  <summary>HTML</summary>
+  
+```
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>sample</title>
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+</head>
+<body>
+<div id="app">
+  <button @click="flg = !flg">表示切り替え</button>
+  <p v-if="flg">
+    メソッド: {{ method() }} <br/>
+    算出プロパティ: {{ prop }} 
+  </p>
+</div>
+<script>
+  new Vue({
+    el: '#app',
+    data: {
+      flg: true
+    },
+    methods: {
+      method() {
+        return (new Date()).toLocaleString()
+      }
+    },
+    computed: {
+      prop() {
+        return (new Date()).toLocaleString()
+      },
+    }
+  });
+</script>
+</body>
+</html>
+
+```
+
+</details>
