--- a/Vue.js/0213レンダリング.md
+++ b/Vue.js/0213レンダリング.md
@@ -159,4 +159,148 @@ style属性をバインドすることで、インラインスタイルを動的
 CSSプロパティ名をキーとし、その値を値とするオブジェクトをv-bind:styleをわたす。
  特定の要素に対して直接スタイルを適用したい場合や、スタイル値をプログラム的に計算する必要がある場合に適しています。例えば、要素のサイズや位置を動的に変更する場合などです。
 
- 
+
+# v-if 
+<details>
+  <summary>HTML</summary>
+  
+```
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+<body>
+  <div id="app">
+    {{price}}円<span v-if="price < 1000">セール実施中！</span><br>
+    <span v-if="stock >= 1">残りは{{stock}}個です！お早めに！</span>
+    <span v-else>在庫切れです。</span><br>
+    <!-- イベントハンドリングボタンの追加 -->
+    <button v-on:click="decreaseStock" v-if="stock > 0">購入する</button>  </div>
+  <!-- CDN から npm パッケージを使う -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@3.2/dist/vue.global.js"></script>
+    <script src="main.js">
+    </script>
+</body>
+</html>
+```
+
+</details>
+
+<details>
+  <summary>JS</summary>
+  
+```
+const app = Vue.createApp({
+  data(){
+    return{
+    price: 900,
+    stock: 10
+    }
+  },
+
+  methods: {
+    // 在庫数を減らすメソッド
+    decreaseStock() {
+      if (this.stock > 0) {
+        this.stock -= 1;
+      }
+    }
+  }
+})
+const vm = app.mount('#app')
+```
+</details
+
+
+
+https://github.com/kb8864/Study-Notes/assets/128299525/fcbb689f-5c4c-48e9-a9eb-1502f6a83f31
+
+
+
+# 在庫がラスト1個になったら在庫数を赤文字で表示する：v-bind:classディレクティブを使用して、在庫数が1のときにlast-stockクラスを適用
+在庫がなくなったら3秒後に在庫数に在庫を10個追加する：decreaseStockメソッド内で、在庫が0になった場合にsetTimeout関数を使用して3秒後に在庫数を10個にリセット
+
+<details>
+  <summary>HTML</summary>
+  
+```
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="main.css">
+</head>
+<body>
+  <div id="app">
+    {{price}}円<span v-if="price < 1000">セール実施中！</span><br>
+    <span v-bind:class="{'last-stock:' stock=== 1}" v-if="stock >= 1">残りは{{stock}}個です！お早めに！</span>
+    <span v-else>在庫切れです。</span><br>
+    <!-- イベントハンドリングボタンの追加 -->
+    <button v-on:click="decreaseStock" v-if="stock > 0">購入する</button>  </div>
+  <!-- CDN から npm パッケージを使う -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@3.2/dist/vue.global.js"></script>
+    <script src="main.js"></script>
+</body>
+</html>
+```
+
+</details>
+
+<details>
+  <summary>JS</summary>
+  
+```
+const app = Vue.createApp({
+  data(){
+    return{
+    price: 900,
+    stock: 10
+    }
+  },
+
+  methods: {
+    // 在庫数を減らすメソッド
+    decreaseStock() {
+      if (this.stock > 0) {
+        this.stock -= 1;
+      }
+    
+    // 在庫がなくなったら3秒後に在庫を10個追加
+    if (this.stock === 0) {
+      setTimeout(() => {
+        this.stock = 10;
+      }, 3000);
+    }
+  }
+}
+  
+})
+
+
+const vm = app.mount('#app')
+```
+
+</details>
+
+<details>
+  <summary>CSS</summary>
+  
+```
+/* 在庫が1個になったときに在庫数を赤文字で表示するためのスタイル */
+.last-stock{
+  color: red;
+}
+```
+
+</details>
+
+
+
+https://github.com/kb8864/Study-Notes/assets/128299525/33f4a7cb-053e-4a9d-b41f-737140153667
+
