--- a/Vue.js/0206フィルター.md
+++ b/Vue.js/0206フィルター.md
@@ -1,5 +1,6 @@
-# フィルター
+# フィルター（描画用ににデータを加工する）
 テンプレ上に組み込まれたデータにちょっとした加工や、演算を実施するのに便利
+{{}}でテンプレーとにバインドするデータに対して、共通のテキストフォーマットを適用させる機能。
 Vue 3ではフィルタの概念が公式には削除され、代わりにメソッドや算出プロパティを使用することが推奨されています
 ```
 フィルター宣言
@@ -100,3 +101,17 @@ Vue.jsでフィルタやコンポーネントを定義する際、それらをVu
 <img width="271" alt="スクリーンショット 2024-02-06 21 19 23" src="https://github.com/kb8864/Study-Notes/assets/128299525/015b74f7-c3ba-4a8e-8826-43fb1267d4e7">
 
 
+# グローバルスコープにフィルターを登録する時と、ローカルスコープにフィルターを登録する時の使い分け
+</details>
+
+<details>
+  <summary>説明</summary>
+  
+```
+グローバルスコープにメソッドを登録する場合は、アプリケーション内のすべてのコンポーネントでそのメソッドを使用するとき。
+例えば、日付や通貨のフォーマットを統一したい場合などが該当。
+
+ ローカルスコープは、特定のコンポーネント限定で使用するフォーマットや計算がある場合、ローカルスコープでメソッドや算出プロパティを定義
+```
+
+</details>
