--- a/Vue.js/0207双方向バインディングを使った入力フォーム.md
+++ b/Vue.js/0207双方向バインディングを使った入力フォーム.md
@@ -68,7 +68,88 @@
 
 </details>
 
+
+<details>
+  <summary>単一ファイルコンポーネント（.vueファイル）</summary>
+  
+```
+<template>
+  <div>
+    <h1>双方向バインディングを使った入力フォーム</h1>
+    <div>
+      <input
+        type="text"
+        name="name"
+        placeholder="氏名"
+        v-model="name"
+        @keyup.enter="submit"
+      />
+      <p>入力した名前は{{ name }}</p>
+    </div>
+    <div>
+      <input
+        type="text"
+        name="email"
+        placeholder="メールアドレス"
+        v-model="email"
+        @keyup.enter="submit"
+      />
+      <p>入力したメールアドレスは{{ email }}</p>
+    </div>
+    <button @click="submit">ログイン</button>
+  </div>
+</template>
+
+<script>
+import { ref } from 'vue';
+
+export default {
+  setup() {
+    const name = ref('');
+    const email = ref('');
+
+    const submit = () => {
+      console.log(`名前: ${name.value}, メール: ${email.value}`);
+      // 送信後の処理（例: APIにデータ送信）をここに記述
+    };
+
+    return { name, email, submit };
+  },
+};
+</script>
+
+<style scoped>
+/* 必要に応じてスタイルを追加 */
+.button {
+  margin-top: 10px;
+}
+</style>
+
+```
+
+
+</details>
+
+<details>
+  <summary>説明</summary>
+  
+```
+<template>内で、ユーザーが入力できる2つのテキストフィールド（氏名とメールアドレス用）を定義
+フィールドにはplaceholder属性が設定されており、ユーザーに入力を促すガイドテキストが表示
+v-modelディレクティブを使用して、各入力フィールドの値をVueのデータプロパティ（nameとemail）と双方向にバインディング
+これにより、フィールドへの入力がリアルタイムで対応するデータプロパティに反映され、その逆も同様
+@keyup.enter="submit"と@click="submit"を使用して、エンターキーが押されたときとログインボタンがクリックされたときにsubmitメソッドを実行するように設定
+<script>セクションでは、Vue 3のComposition APIを使用
+refを使用してリアクティブなデータプロパティを定義し、submit関数ではこれらのプロパティの値をコンソールに出力し
+```
+
+</details>
+
 https://github.com/kb8864/Study-Notes/assets/128299525/80d0ba54-3826-43ac-9dd5-2e08ca80ea59
+
+
+
+
 
 # v-model を使ったいろんな機能
 
@@ -185,7 +266,6 @@ https://github.com/kb8864/Study-Notes/assets/128299525/80d0ba54-3826-43ac-9dd5-2
 </details>
 
 
-https://github.com/kb8864/Study-Notes/assets/128299525/2fe6accb-dcde-4008-b09f-4816d189fa5d
 
 <details>
   <summary>HTML</summary>
@@ -262,6 +342,76 @@ https://github.com/kb8864/Study-Notes/assets/128299525/2fe6accb-dcde-4008-b09f-4
 ```
 
 </details>
+
+<details>
+  <summary>単一ファイルコンポーネント（.vueファイル）</summary>
+  
+```
+<template>
+  <div>
+    <h2>セレクトボックスのバインディング</h2>
+    <select v-model="selected">
+      <option disabled value="">選択してください</option>
+      <option>Vue</option>
+      <option>Angular</option>
+      <option>React</option>
+    </select>
+    <br />
+    <span>選択した言語: {{ selected }}</span>
+    <br />
+    <h2>複数選択セレクトボックスのバインディング</h2>
+    <select multiple v-model="selectedMultiple">
+      <option>Vue</option>
+      <option>Angular</option>
+      <option>React</option>
+    </select>
+    <br />
+    <span>選択した言語: {{ selectedMultiple }}</span>
+    <br />
+    <h3>ラジオボタンで選択</h3>
+    <div>
+      <input type="radio" id="vue" value="Vue" v-model="picked" />
+      <label for="vue">Vue</label>
+      <br />
+      <input type="radio" id="angular" value="Angular" v-model="picked" />
+      <label for="angular">Angular</label>
+      <br />
+      <input type="radio" id="react" value="React" v-model="picked" />
+      <label for="react">React</label>
+    </div>
+    <br />
+    <span>選んだのは: {{ picked }}</span>
+    <br />
+    <button @click="submit">送信</button>
+  </div>
+</template>
+
+<script setup>
+import { ref } from 'vue';
+
+const selected = ref('');
+const selectedMultiple = ref([]);
+const picked = ref('');
+
+const submit = () => {
+  console.log('選択した言語: ', selected.value);
+  console.log('複数選択した言語: ', selectedMultiple.value);
+  console.log('ラジオボタンで選んだ言語: ', picked.value);
+};
+</script>
+
+```
+
+</details>
+
+<details>
+  <summary>説明</summary>
+  
+```
+```
+
+</details>
+
 
 
 https://github.com/kb8864/Study-Notes/assets/128299525/d35a697f-801a-4d50-9e9b-cf5715d3839e
