--- a/Vue.js/0205コンポーネント.md
+++ b/Vue.js/0205コンポーネント.md
@@ -33,3 +33,7 @@ template>
 ブラウザで確認するとtemplateタグに追加したHelloコンポーネントすべてが表示されます。1度コンポーネントをimportすることでimportした親コンポーネント側のファイルでは何度でもコンポーネントを利用することができます。
 
 
+Vueでは、アプリケーションで使用するデータをテンプレート変数として設定し、テンプレートからこれらを参照することが一般的な役割分担とされてる。
+のデータをテンプレートに割り当てる仕組みをデータバインディングと呼ぶ
+
+
