--- a/Vue.js/0207双方向バインディングを使った入力フォーム.md
+++ b/Vue.js/0207双方向バインディングを使った入力フォーム.md
@@ -417,3 +417,176 @@ const submit = () => {
 https://github.com/kb8864/Study-Notes/assets/128299525/d35a697f-801a-4d50-9e9b-cf5715d3839e
 
 
+# 双方向のデータバインディングのカスタマイズについて
+Vue.jsでは、通常v-modelを使ってこの機能を簡単に実装するが、入力されたデータに何らかの加工を行いたい場合など、v-modelだけでは対応できない時がある。そんな時はv-bind:valueとv-on:inputを組み合わせて、入力データの取得と加工を行う方法がある。
+
+例えば、ユーザーが入力したメールアドレスをセミコロンで区切り、それを<ul>リストとして表示するを作る。
+v-modelだけでは対応できないので、$event.target.valueを使用してその値を直接取得し、加工してからデータにセットする方法をとる。
+（$event.targetを使うことで、イベントの発生源であるDOM要素から直接情報を取得し、より細かい制御やカスタマイズを実現できる）
+
+$event.targetの具体的な役割
+要素の特定: イベントが発生した具体的な要素を特定する
+これは、同じイベントハンドラが複数の要素に適用されている場合や、親要素に設置したイベントリスナーが子要素のイベントをキャッチした場合に有効。
+値の取得: フォーム要素から値を取得する際に使用する。
+属性の取得: value以外にも、$event.targetを使って、イベントが発生した要素の他の属性（例えば、id, name, typeなど）にアクセスする
+
+<details>
+  <summary>単一ファイルコンポーネント（.vueファイル）</summary>
+  
+```
+<template>
+  <div class="email-container">
+    <form>
+      <label for="email-input">メールアドレス：</label>
+      <textarea id="email-input" v-bind:value="emails.join(';')"
+        v-on:input="updateEmails"></textarea>
+    </form>
+    <ul>
+      <li v-for="email in emails" :key="email">
+        {{ email }}
+      </li>
+    </ul>
+  </div>
+</template>
+
+<script setup>
+import { ref } from 'vue'
+
+const emails = ref([])
+
+function updateEmails($event) {
+  emails.value = $event.target.value.split(';')
+}
+</script>
+
+<style scoped>
+.email-container {
+  max-width: 500px;
+  margin: 20px auto;
+  font-family: Arial, sans-serif;
+}
+
+form {
+  margin-bottom: 15px;
+}
+
+textarea {
+  width: 100%;
+  height: 120px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+li {
+  background-color: #f3f3f3;
+  padding: 10px;
+  margin-bottom: 5px;
+  border-radius: 4px;
+}
+</style>
+
+```
+
+</details>
+
+これを修正する。
+
+# メールアドレスをリストに登録し、それらを選択肢として表示できるように変更
+メールアドレスを追加するための新しいボタンをフォームに追加。
+新しいメールアドレスをemails配列に追加するメソッドを作成。
+
+select要素を使用して、登録されたメールアドレスの選択肢を表示。
+
+<details>
+  <summary>単一ファイルコンポーネント（.vueファイル）</summary>
+  
+```
+<template>
+  <div class="email-container">
+    <form @submit.prevent="addEmail">
+      <label for="email-input">メールアドレス：</label>
+       <input type="text" v-model="newEmail" id="email-input" placeholder="メールアドレスを入力"/>
+       <button type="submit">追加</button>
+    </form>
+    <select v-if="emails.length > 0">
+      <option v-for="email in emails" :key="email" :value="email">
+        {{ email }}
+      </option>
+    </select>
+    
+    <ul>
+      <li v-for="email in emails" :key="email">
+        {{ email }}
+      </li>
+    </ul>
+  </div>
+</template>
+
+<script setup>
+import { ref } from 'vue'
+
+const emails = ref([])
+const newEmail = ref('')
+
+function addEmail(event) {
+  const emailInput = event.target.querySelector('input[type="text"]')
+  const newEmail = emailInput.value
+  if (newEmail && !emails.value.includes(newEmail)) {
+    emails.value.push(newEmail)
+    emailInput.value = '' // 入力フィールドをリセット
+  }
+}</script>
+
+<style scoped>
+.email-container {
+  max-width: 500px;
+  margin: 20px auto;
+  font-family: Arial, sans-serif;
+}
+
+form {
+  margin-bottom: 15px;
+}
+
+textarea {
+  width: 100%;
+  height: 120px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+li {
+  background-color: #f3f3f3;
+  padding: 10px;
+  margin-bottom: 5px;
+  border-radius: 4px;
+}
+</style>
+
+
+```
+
+</details>
+
+
+
+
+メールアドレスの追加: addEmailメソッドでは、新しいメールアドレスが既にリストに存在しないことを確認した上で、emails配列に追加。このメソッドはボタンをクリりっくした時におこる。
+event.targetを使用してフォーム内のテキストフィールドにアクセスし、その値（新しいメールアドレス）を取得する。
+取得したメールアドレスがリストにまだ存在しない場合、それをemails配列に追加し、テキストフィールドをクリアする
