--- a/Nuxt/0224Nuxt.md
+++ b/Nuxt/0224Nuxt.md
@@ -3,8 +3,13 @@
 [辞書扱い](https://reffect.co.jp/vue/nuxt3)
 
 
-# 09f6c45
-
+# 環境構築
+```
+% npx nuxi init アプリ名
+```
+`yarn install`
+起動方法
+`yarn dev --o`
 # 作業内容
 １　rootディレクトリにpagesというディレクトリを作成
 Nuxt3で複数ページを実装したい場合、ルートディレクトリにpagesというディレクトリを作成し、さらにその配下で、vueファイルを作成することでそのページ遷移をできるようになる。
