--- a/Nuxt/0225デフォルトレイアウト.md
+++ b/Nuxt/0225デフォルトレイアウト.md
@@ -82,5 +82,10 @@ const error = useError();
 ```
 
 </details>
+
 ![スクリーンショット 2024-03-04 19 55 49](https://github.com/kb8864/Study-Notes/assets/128299525/af33e856-4fcd-4539-a062-3fe53d13ebd6)
 
+
+# head情報の設定
+Nuxt3ではuseHead()を使用することで、ページやコンポーネントのhead情報を設定できる
+app.vueを編集
