--- a/Nuxt/0225デフォルトレイアウト.md
+++ b/Nuxt/0225デフォルトレイアウト.md
@@ -89,3 +89,65 @@ const error = useError();
 # head情報の設定
 Nuxt3ではuseHead()を使用することで、ページやコンポーネントのhead情報を設定できる
 app.vueを編集
+<details>
+  <summary>app.vue</summary>
+  
+```
+
+import { NuxtLayout } from '#build/components';
+<template>
+  <div>
+    <NuxtLayout>
+      <NuxtPage />
+    </NuxtLayout>
+  </div>
+</template>
+
+<script setup>
+  useHead({
+    title: "Nuxt3",
+
+  })
+</script>
+```
+
+</details>
+ヘッダーが指定したNuxtに変わっていることを確認
+
+![スクリーンショット 2024-03-04 20 25 39](https://github.com/kb8864/Study-Notes/assets/128299525/fb4b21a5-34d4-4fd6-b899-9ccb7d72f8f1)
+
+![スクリーンショット 2024-03-04 20 25 45](https://github.com/kb8864/Study-Notes/assets/128299525/315e9c99-a86d-4d49-ba0e-2024c42ad2e8)
+
+# グーグルフォントの読み込み
+[グーグルフォント](https://fonts.google.com/specimen/Permanent+Marker)
+
+<details>
+  <summary>app.vue</summary>
+  
+```
+<script setup>
+  useHead({
+    title: "Nuxt3",
+    link: [{
+      rel: "stylesheet", href: "https://fonts.googleapis.com/css2?family=Micro+5&family=Permanent+Marker&display=swap"
+    }]
+
+  })
+</script>
+```
+
+</details>
+
+<details>
+  <summary>default.vue</summary>
+  
+```
+  html{
+  font-family: "Micro 5", sans-serif;
+
+  }
+```
+
+</details>
+
+![スクリーンショット 2024-03-04 20 39 14](https://github.com/kb8864/Study-Notes/assets/128299525/02d0a4c9-41dd-4c9d-935f-810206a85653)
