--- a/Nuxt/0225非同期.md
+++ b/Nuxt/0225非同期.md
@@ -1,5 +1,4 @@
-# 作業内容
-
+# jsonデータから項目を指定して、1人のデータを表示させる
 使用したサンプルコード
 
 [{JSON} Placeholder](https://jsonplaceholder.typicode.com/users)
@@ -37,3 +36,53 @@ status	データリクエストの状態を示す文字列
 
 ![スクリーンショット 2024-03-04 22 35 37](https://github.com/kb8864/Study-Notes/assets/128299525/e197bda0-8033-485f-b390-f23cc61f5b05)
 
+
+# jsonデータから複数人データを画面表示させる方法
+## v-forを使用する
+v-for="(変数名) in (配列またはオブジェクト)"
+[v-forの使い方1](https://jp.skilled.yashio-corp.com/media/vue/6120/#v-forkey)
+[v-forの使い方2](https://qiita.com/JetNel0/items/1f618683e4acce5f9aa6#4-key%E5%B1%9E%E6%80%A7%E3%81%AF%E3%81%AA%E3%82%8B%E3%81%B9%E3%81%8F%E3%81%A4%E3%81%91%E3%82%88%E3%81%86)
+APIで取得したデータからidとnameを複数画面表示させる
+
+<details>
+  <summary></summary>
+  
+```
+<template>
+  <div>
+    <NuxtLayout>
+      <NuxtPage />
+
+    <!-- <p>{{ users[0].id }}, {{ users[0].name }} </p> -->
+      <ui>
+        <li v-for="user in users" :key="user.id">
+          <!-- 以下はコンテンツ -->
+          {{ user.id }},user.name
+        </li>
+      </ui>
+    </NuxtLayout>
+  </div>
+</template>
+
+
+<script setup>
+  const { data: users } = await useFetch('https://jsonplaceholder.typicode.com/users')
+  useHead({
+  title: "Nuxt App", // titleタグ設定
+  link: [
+    // GoogleFonts設定
+    {
+      rel: "stylesheet",
+      href: "https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap",
+    },
+  ],
+});
+</script>
+```
+
+</details>
+
+レンダリングすると以下のように定義した10件のjsonデータ内のidとnameが表示される
+これは変数userには、jsonのでーたが入っていて、v-forを使用してユーザーデータを1つずつ取り出してループ処理で画面出力をしている
+
+![スクリーンショット 2024-03-04 23 21 11](https://github.com/kb8864/Study-Notes/assets/128299525/5eeeac48-555a-4a1d-86b6-27a1d63479b6)
