--- a/Nuxt/0225非同期.md
+++ b/Nuxt/0225非同期.md
@@ -86,3 +86,46 @@ APIで取得したデータからidとnameを複数画面表示させる
 これは変数userには、jsonのでーたが入っていて、v-forを使用してユーザーデータを1つずつ取り出してループ処理で画面出力をしている
 
 ![スクリーンショット 2024-03-04 23 21 11](https://github.com/kb8864/Study-Notes/assets/128299525/5eeeac48-555a-4a1d-86b6-27a1d63479b6)
+
+
+
+# 例外エラー対策
+app.vue
+```
+<script setup>
+// useFetchで例外エラーを試しに発生させてみる↓
+ ⭐️ const { data: users } = await useFetch('https://jsonplaceholder.typicode.com/userssssss')
+  useHead({
+  title: "Nuxt App", // titleタグ設定
+  link: [
+    // GoogleFonts設定
+    {
+      rel: "stylesheet",
+      href: "https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap",
+    },
+  ],
+});
+</script>
+```
+上記のコードは戻り値としてエラーを返却しないので、受け取る準備をしてあげないといけない
+
+```
+  const { data: users, error } = await useFetch('https://jsonplaceholder.typicode.com/userssssss')
+  console.log(error.value)
+```
+404 Not Foundを確認![スクリーンショット 2024-03-04 23 38 34](https://github.com/kb8864/Study-Notes/assets/128299525/236b5539-2ec7-4875-9c3b-71318d306c23)
+
+## エラーを取得したら、エラーをページに表示するように修正する
+
+app.vue
+```
+  const { data: users, error } = await useFetch('https://jsonplaceholder.typicode.com/userssssss')
+  // console.log(error.value)
+  if(error.value)
+  throw createError({ statusCode: 404, statusMessage: 'ページが見つかりません'})
+
+``
+存在しないurlをfetchした場合、createError関数を使ってエラーページを表示する
+![スクリーンショット 2024-03-04 23 57 21](https://github.com/kb8864/Study-Notes/assets/128299525/3d261c98-fd03-421d-b5b2-d6c6f353cdf1)
+
+
