--- a/Nuxt/0226アセットファイルの扱い.md
+++ b/Nuxt/0226アセットファイルの扱い.md
@@ -11,4 +11,12 @@
 作成したフォルダによってパスの記述が異なるから気をつける
  assetsディレクトリ配下の画像表示する場合ははこんな感じ
 
- 
+```
+      <img src="~/assets/1.jpeg" alt="1">
+      <img src="~/assets/2.jpeg" alt="2">
+      <img src="~/assets/3.jpeg" alt="3">
+```
+
+ ![スクリーンショット 2024-03-05 0 44 13](https://github.com/kb8864/Study-Notes/assets/128299525/0a947adf-a262-4d97-9931-a17274bf7afc)
+![スクリーンショット 2024-03-05 0 45 30](https://github.com/kb8864/Study-Notes/assets/128299525/5ef42b40-ab6d-4b16-a3e1-787f52b454a0)
+
