--- a/Nuxt/0226アセットファイルの扱い.md
+++ b/Nuxt/0226アセットファイルの扱い.md
@@ -7,7 +7,7 @@
 ２格納した画像はapp.vueから参照してページに表示させる
 
 
-ルートにpublicかassetsフォルダを作成しその配下に画像を格納する
+ルートにassetsフォルダを作成しその配下に画像を格納する
 作成したフォルダによってパスの記述が異なるから気をつける
  assetsディレクトリ配下の画像表示する場合ははこんな感じ
 
