--- a/フローチャート.md
+++ b/フローチャート.md
@@ -8,9 +8,12 @@
 [初めてのNuxt3](https://dts-hr.udemy.com/course/nuxtjs-the-complete-guide/learn/lecture/37530926?learning_path_id=6828908#overview)
 あとちょっと！！
 
+[上のコースの作者が書いた記事](https://www.proglus.jp/courses/67)
+
+
 [【Nuxt.js】入門から応用まで！【Firebase】と連携しWebアプリをつくってみよう【SPA】](https://dts-hr.udemy.com/course/nuxtjs-firebase/learn/lecture/28577167?learning_path_id=6828908#overview)
 
-[超Vue.js 完全ガイド2024 (Vue Router, Pinia含む)]([https://dts-hr.udemy.com/course/vue3-typescript/learn/lecture/41604556#overview](https://dts-hr.udemy.com/course/vue-js-complete-guide/learn/lecture/42549812#overview)https://dts-hr.udemy.com/course/vue-js-complete-guide/learn/lecture/42549812#overview)
+[超Vue.js 完全ガイド2024 Vue Router, Pinia含む]([https://dts-hr.udemy.com/course/vue3-typescript/learn/lecture/41604556#overview](https://dts-hr.udemy.com/course/vue-js-complete-guide/learn/lecture/42549812#overview)https://dts-hr.udemy.com/course/vue-js-complete-guide/learn/lecture/42549812#overview)
 購入
 
 
