--- a/フローチャート.md
+++ b/フローチャート.md
@@ -13,7 +13,14 @@
 
 [【Nuxt.js】入門から応用まで！【Firebase】と連携しWebアプリをつくってみよう【SPA】](https://dts-hr.udemy.com/course/nuxtjs-firebase/learn/lecture/28577167?learning_path_id=6828908#overview)
 
-[超Vue.js 完全ガイド2024 Vue Router, Pinia含む]([https://dts-hr.udemy.com/course/vue3-typescript/learn/lecture/41604556#overview](https://dts-hr.udemy.com/course/vue-js-complete-guide/learn/lecture/42549812#overview)https://dts-hr.udemy.com/course/vue-js-complete-guide/learn/lecture/42549812#overview)
+[超Vue.js 完全ガイド2024 Vue Router, Pinia含む](https://dts-hr.udemy.com/course/vue-js-complete-guide/learn/lecture/42549812#overview)
+
 購入
+
+java Scriptのアプリ２つ
+
+[SpringとVue.jsで作るログイン機能付きガチャ](https://zenn.dev/misaka/books/9734700544990d)
+
+[javaプログラマー向け学習のための本](https://qiita.com/bonybeat/items/a7ed6cc96d256570ac74)
 
 
