--- a/Nuxt/0225非同期.md
+++ b/Nuxt/0225非同期.md
@@ -7,6 +7,8 @@
 ## useFetch()を使用して非同期データを取得する。
 useFetchは、Nuxt 3のComposition APIの一部として提供される非同期データ取得のためのcomposable
 
+[Nuxt3のuseAsyncData()とuseFetch()の使い方](https://shibayama-masaki.com/2023/04/01/nuxt3-useasyncdata-usefetch/)
+
 <details>
   <summary>コード</summary>
   
